adding some more end points for fetching of the data
